# releasenotes

./: .gitignore  Cargo.toml  README.md  test_command.sh  test_generate_release_notes.sh  test_tags.sh
.github/workflows/: ci.yml
src/: lib.rs  main.rs  system_prompt.txt
tests/: cli_test.rs
