[package]
name = "releasenotes"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = "0.44.1"
clap = { version = "4.4.11", features = ["derive"] }
git2 = "0.18.1"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.108"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
fs-err = "2.11.0"
async-openai = "0.17.1"

[dev-dependencies]
mockito = "1.2.0"
assert_cmd = "2.0.12"
predicates = "3.0.4"
